--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,13 +2,16 @@
 body {
   font-size: 18px;
   font-weight: 400;
-  color: #314584; }
+  color: #314584;
+  background: url("../img/header/illustration-header.png") right top no-repeat;
+  width: 100%;
+  height: 100%; }
 
 .navbar {
-  margin-top: 50px;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+  padding-top: 50px;
+  -webkit-box-align: baseline;
+  -ms-flex-align: baseline;
+  align-items: baseline;
   font-weight: 600; }
   .navbar .navbar__item {
     display: inline-block;
@@ -29,3 +32,39 @@ body {
     .navbar .contact__button:hover {
       background-color: #ff3946;
       color: #fff; }
+
+.section-content {
+  margin-top: 100px; }
+  .section-content__heading {
+    font-size: 74px;
+    font-weight: 600;
+    margin-bottom: 2rem; }
+  .section-content__subtitle {
+    color: #6e757a;
+    margin-bottom: 2rem; }
+
+.buttons-block {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .buttons-block .section__button {
+    padding: 20px 25px;
+    text-align: center;
+    color: #314584;
+    font-weight: 600;
+    -webkit-transition: .5s;
+    -o-transition: .5s;
+    transition: .5s; }
+    .buttons-block .section__button:hover {
+      color: #628aff; }
+  .buttons-block .button__highlighted {
+    color: #fff;
+    background: #ff3946;
+    border-radius: 30px;
+    border: solid;
+    -webkit-transition: .5s;
+    -o-transition: .5s;
+    transition: .5s; }
+    .buttons-block .button__highlighted:hover {
+      background-color: #fff;
+      color: #ff3946; }
