--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -14,22 +14,24 @@ body {
 	font-size: $fz-avg;
 	font-weight: 400;
 	color: $c-main;
+
+	background: url("../img/header/illustration-header.png") right top no-repeat;
+	width: 100%;
+	height: 100%;
 }
 
 .header {
-	
 }
 
 .navbar {
-	margin-top: 50px;
-	align-items: center;
+	padding-top: 50px;
+	align-items: baseline;
 	font-weight: 600;
 
 	.navbar__item {
 		display: inline-block;
 		margin: 0 15px;
 		color: $c-main;
-
 		transition: .5s;
 
 		&:hover {
@@ -49,6 +51,50 @@ body {
 			color: #fff;
 		}
 	}
+}
 
+.section-content {
+	margin-top: 100px;
+
+	&__heading {
+		font-size: $fz-big;
+		font-weight: 600;
+		margin-bottom: 2rem;
+	}
+
+	&__subtitle {
+		color: $c-grey-1;
+		margin-bottom: 2rem;
+	}
+}
+
+.buttons-block {
+	align-items: center;
+
+	.section__button {
+		padding: 20px 25px;
+		text-align: center;
+		color: $c-main;
+		font-weight: 600;
+		transition: .5s;
+
+		&:hover {
+			color: $c-main*2%;
+		}
+	}
+
+	.button__highlighted {
+		color: #fff;
+		background: $c-second;
+		border-radius: 30px;
+		border: solid;
+		transition: .5s;
+
+		
+		&:hover {
+			background-color: #fff;
+			color: $c-second;
+		}
+	}
 }
 
