--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -3,11 +3,24 @@
 		padding: 25px 0;
 		text-align: center;
 	}
+
+	.section-content {
+		text-align: center;
+	}
+
+	.buttons-block {
+		justify-content: space-between;
+		margin: auto;
+	}
 }
 
 @media screen and (max-width: 768px) {
 	.navbar__item {
 		margin: 0 auto;
 		width: 100%;
+	}
+
+	.buttons-block {
+		justify-content: center;
 	}
 }
