--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,10 +2,18 @@
 body {
   font-size: 18px;
   font-weight: 400;
-  color: #314584;
-  background: url("../img/header/illustration-header.png") right top no-repeat;
-  width: 100%;
-  height: 100%; }
+  line-height: 1.6;
+  color: #314584; }
+
+.header {
+  margin-bottom: 200px; }
+  .header-content {
+    margin-top: 10%; }
+  .header--background {
+    position: absolute;
+    top: 30px;
+    right: 0px;
+    width: 575px; }
 
 .navbar {
   padding-top: 50px;
@@ -33,20 +41,28 @@ body {
       background-color: #ff3946;
       color: #fff; }
 
-.section-content {
-  margin-top: 100px; }
-  .section-content__heading {
-    font-size: 74px;
-    font-weight: 600;
-    margin-bottom: 2rem; }
-  .section-content__subtitle {
-    color: #6e757a;
-    margin-bottom: 2rem; }
+.section {
+  padding: 100px 0; }
+
+.section-content__heading {
+  font-size: 74px;
+  font-weight: 600;
+  margin-bottom: 2rem; }
+
+.section-content__title {
+  font-size: 48px;
+  font-weight: 600;
+  margin-bottom: 2rem; }
+
+.section-content__subtitle {
+  color: #6e757a;
+  margin-bottom: 2rem; }
 
 .buttons-block {
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  font-size: 14px; }
   .buttons-block .section__button {
     padding: 20px 25px;
     text-align: center;
@@ -61,10 +77,33 @@ body {
     color: #fff;
     background: #ff3946;
     border-radius: 30px;
-    border: solid;
+    border: solid #ff3946;
     -webkit-transition: .5s;
     -o-transition: .5s;
     transition: .5s; }
     .buttons-block .button__highlighted:hover {
       background-color: #fff;
       color: #ff3946; }
+
+.dropdown-menu {
+  background-color: #314584; }
+  .dropdown-menu .dropdown-item {
+    font-weight: 600;
+    color: #fff;
+    text-align: center;
+    -webkit-transition: .5s;
+    -o-transition: .5s;
+    transition: .5s; }
+    .dropdown-menu .dropdown-item:hover {
+      background: #fff;
+      color: #314584; }
+
+.service-block {
+  padding: 30px 40px; }
+  .service-block__picture {
+    margin-bottom: 60px; }
+  .service-block__title {
+    font-size: 28px;
+    font-weight: 600; }
+  .service-block__text {
+    font-size: 14px; }
