--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -13,14 +13,23 @@ $fz-small: 14px;
 body {
 	font-size: $fz-avg;
 	font-weight: 400;
+	line-height: 1.6;
 	color: $c-main;
-
-	background: url("../img/header/illustration-header.png") right top no-repeat;
-	width: 100%;
-	height: 100%;
 }
 
 .header {
+	margin-bottom: 200px;
+
+	&-content {
+		margin-top: 10%;
+	}
+
+	&--background {
+		position: absolute;
+		top: 30px;
+		right: 0px;
+		width: 575px;
+	}
 }
 
 .navbar {
@@ -53,11 +62,21 @@ body {
 	}
 }
 
+.section {
+	padding: 100px 0;
+}
+
+
 .section-content {
-	margin-top: 100px;
 
 	&__heading {
 		font-size: $fz-big;
+		font-weight: 600;
+		margin-bottom: 2rem;
+	}
+
+	&__title {
+		font-size: $fz-medium;
 		font-weight: 600;
 		margin-bottom: 2rem;
 	}
@@ -70,6 +89,7 @@ body {
 
 .buttons-block {
 	align-items: center;
+	font-size: $fz-small;
 
 	.section__button {
 		padding: 20px 25px;
@@ -87,10 +107,9 @@ body {
 		color: #fff;
 		background: $c-second;
 		border-radius: 30px;
-		border: solid;
+		border: solid $c-second;
 		transition: .5s;
 
-		
 		&:hover {
 			background-color: #fff;
 			color: $c-second;
@@ -98,3 +117,37 @@ body {
 	}
 }
 
+.dropdown-menu {
+	background-color: $c-main;
+
+	.dropdown-item {
+		font-weight: 600;
+		color: #fff;
+		text-align: center;
+		transition: .5s;
+
+		&:hover {
+			background: #fff;
+			color: $c-main;
+		}
+	}
+}
+
+
+
+.service-block {
+	padding: 30px 40px;
+
+	&__picture {
+		margin-bottom: 60px;
+	}
+
+	&__title {
+		font-size: 28px;
+		font-weight: 600;
+	}
+
+	&__text {
+		font-size: $fz-small;
+	}
+}
