--- a/css/main.css
+++ b/css/main.css
@@ -151,6 +151,9 @@ body {
     background: none;
     margin: auto; }
 
+.blog {
+  background: url("../img/blog/shape-right.png") bottom right no-repeat; }
+
 .blog-item {
   padding: 40px;
   margin: 15px;
@@ -186,3 +189,8 @@ body {
       color: #fff; }
     .blog-item:hover .button--arrow {
       color: #fff; }
+
+.input-block .input__item input {
+  padding: 20px;
+  margin: 15px 0;
+  background: #f4fafe; }
