--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Work+Sans:400,600&display=swap");
 body {
+  font-family: "Work Sans";
   font-size: 18px;
   font-weight: 400;
   line-height: 1.6;
@@ -233,5 +234,3 @@ body {
         color: #ff3946; }
     .footer-info .link-block .link--social {
       font-size: 48px; }
-
-/*# sourceMappingURL=main.css.map */
