--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,10 @@ $fz-medium: 48px;
 $fz-avg: 18px;
 $fz-small: 14px;
 
+$ff:'Work Sans', ;
+
 body {
+	font-family: $ff;
 	font-size: $fz-avg;
 	font-weight: 400;
 	line-height: 1.6;
